2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Use _ready, defined like this in the base class

2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.py:
	Remove all the sync logic from the mpegts muxer

2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/fmp4/fmp4.py:
	Change version requirements for the muxer

2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/fmp4/fmp4.py:
	Add missing changes to the last commit

2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* ChangeLog:
	* flumotion/component/consumers/smoothstreamer/Makefile.am:
	* flumotion/component/consumers/smoothstreamer/packetizer.py:
	* flumotion/component/consumers/smoothstreamer/resources.py:
	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	* flumotion/component/muxers/fmp4/fmp4.py:
	Start using the streamer base class and the GstForceKeyUnit events


2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/consumers/Makefile.am:
	* flumotion/test/Makefile.am:
	Remove HLS components which are now part of flumotion

2011-08-31  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/plugs/multibitrate/multibitrate.py:
	mount point resource is already set by the component

2011-08-31  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/plugs/multibitrate/multibitrate.xml:
	Remove the 'required' bit from target-bitrate

2011-08-31  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/plugs/multibitrate/multibitrate.xml:
	uppps, bitrate property is part of compound property

2011-08-31  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/plugs/multibitrate/multibitrate.py: