@@ -1,5 +1,10 @@
 2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	* flumotion/component/muxers/mpegts/mpegts.py:
+	Don't use anymore the audio-only hack
+
+2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
 	Use _ready, defined like this in the base class
 
